Fix login page problem with password, change to hash

--- a/frontend/src/main/frontend/src/app/main/login/login.html
+++ b/frontend/src/main/frontend/src/app/main/login/login.html
@@ -21,8 +21,7 @@
                 </md-input-container>
 
                 <md-input-container class="md-block" md-no-float>
-                    <input type="password" name="password" ng-model="vm.usuario.senha" placeholder="Senha"
-                           required>
+                    <input type="password" name="password" ng-model="password" placeholder="Senha" required>
                     <div ng-messages="loginForm.password.$error" role="alert">
                         <div ng-message="required">
                             <span>O campo senha é obrigatorio</span>
